trying SO hard to fix contrast errors

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -149,7 +149,7 @@ main {
 .welcome {
     grid-row: 1 / 2;
     grid-column: 1 / 2;
-    color: white;
+    color: rgb(0, 0, 0);
     margin: 0 auto;
     
 }
@@ -209,6 +209,9 @@ main {
     height: 7vh;
 }
 
+.third-spotlight {
+    display: none;
+}
 
 main div {
     margin: 0 auto;
