--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -135,7 +135,7 @@ header {
 .welcome {
     grid-row: 1 / 2;
     grid-column: 1 / 2;
-    color: white;
+    color: rgb(0, 0, 0);
     margin: 0 auto;
     
 }
@@ -219,6 +219,10 @@ header {
     border-top: solid black 1px;
     width: 40vw;
     height: 7vh;
+}
+
+.third-spotlight {
+    display: none;
 }
 
 main div {
